ewarehouse-apex/api/src/objects/e_Warehouse_Extra_Info__c.object
<CustomObject>
    <fields>
        <fullName>Baseline_Date__c</fullName>
        <defaultValue>DATE(2013, 8, 1)</defaultValue>
        <label>Baseline Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CVs_Covered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CVs Covered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farmers_receiving_information__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of farmers receiving market information through SMS</description>
        <label>Farmers receiving information</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grain_checks_FCI_staff_and_VKWs__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of checks conducted by FCI staff and VKWs on grain stored</description>
        <label>Grain checks FCI staff and VKWs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_update__c</fullName>
        <label>Last update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_trainings_on_adoption_of_input__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of trainings on adoption of input</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_price_of_input_purchased__c</fullName>
        <label>Total price of input purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_of_inputs_fertilizers_purchased__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Volume of inputs/fertilizers purchased by FCI (find out the input type)</description>
        <label>Volume of inputs/fertilizers purchased</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>e-Warehouse Extra Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e-Warehouse Extra Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>